<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="28dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/medium_text"/>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <Button
            style="@style/MainButtons"
            android:id="@+id/search_btn"
            android:text="@string/search"
            app:icon="@drawable/search_icon" />

        <Button
            style="@style/MainButtons"
            android:id="@+id/media_btn"
            android:text="@string/media"
            app:icon="@drawable/media_icon"/>

        <Button
            style="@style/MainButtons"
            android:id="@+id/settings_btn"
            android:text="@string/settings"
            app:icon="@drawable/settings_icon"/>
    </LinearLayout>
</LinearLayout>