<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingHorizontal="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:paddingVertical="10dp">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            app:icon="@drawable/arrow_back_icon"
            app:iconTint="@color/yt_black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:textSize="@dimen/small_text"
                android:layout_gravity="start"
                android:textColor="@color/black"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_app"
                android:textSize="@dimen/small_text"
                android:layout_gravity="start"
                android:paddingTop="14dp"
                android:textColor="@color/black"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:icon="@drawable/share_icon"
                app:iconTint="@color/text_gray"
                android:layout_gravity="end"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_to_support"
                android:textSize="@dimen/small_text"
                android:layout_gravity="start"
                android:paddingTop="14dp"
                android:textColor="@color/black"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:icon="@drawable/support_icon"
                app:iconTint="@color/text_gray"
                android:layout_gravity="end"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usage_license"
                android:textSize="@dimen/small_text"
                android:layout_gravity="start"
                android:paddingTop="14dp"
                android:textColor="@color/black"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:icon="@drawable/arrow_forward_icon"
                app:iconTint="@color/text_gray"
                android:layout_gravity="end"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>